GNOME Bugzilla – Bug 758230
search provider: unnecessary error
Last modified: 2015-11-17 15:46:37 UTC
Looking at https://bugzilla.redhat.com/show_bug.cgi?id=1273946 it seems that timeouts while talking to eds gets caught in crash collection systems. I think it would be much better to log a warning and exit quietly.
Created attachment 315757 [details] [review] search-provider: Don't dump core on timeout g_error is documented as "This function will result in a core dump". It will get picked up by crash collection systems and cause noise there, which is not helpful. Just log a warning and move on.
Review of attachment 315757 [details] [review]: Seems obviously correct to me.
Attachment 315757 [details] pushed as c90c2b3 - search-provider: Don't dump core on timeout