search-provider: Don't dump core on timeout

g_error is documented as "This function will result in a core dump".
It will get picked up by crash collection systems and cause noise
there, which is not helpful. Just log a warning and move on.

https://bugzilla.gnome.org/show_bug.cgi?id=758230